--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "2.1.4",
+    "@material-tailwind/react": "^2.1.4",
     "@react-oauth/google": "^0.12.1",
     "antd": "^5.22.1",
     "dom": "^0.0.3",
