--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.22.1",
     "dom": "^0.0.3",
     "encrypt-storage": "^2.13.3",
+    "moment": "^2.30.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
